--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,6 +1,6 @@
 <div class="row">
-    <div class="col-sm-6 col-md-4 col-md-offset-4">
-        <form ng-submit="signIn()" class="form-signin" role="form">
+    <div class="col-md-4 col-md-offset-4">
+        <form ng-submit="signIn()" ng-show="isAuthenticated==false" class="form-signin" role="form">
             <h2 class="form-signin-heading">Please sign in</h2>
             <div class="alert alert-danger" role="alert" ng-show="authError">
                 <strong>Login failed!</strong> check your credentials!
