--- a/app/views/notes.html
+++ b/app/views/notes.html
@@ -1,6 +1,20 @@
 
-<div class="row search-area" ng-show="notes.length > 1">
-    <div class="col-sm-6 col-md-4">
+<div class="row" ng-show="notes==null">
+    <div class="col-md-4 col-md-offset-4">
+        <div class="progress">
+          <div class="progress-bar progress-bar-striped active" role="progressbar" style="width: 100%">
+            <span class="sr-only">Loading ...</span>
+          </div>
+        </div>
+    </div>
+</div>
+
+<div class="alert alert-warning" role="alert" ng-show="notes!=null&&!notes.length">
+    <strong>Warning!</strong> No notes yet. Why not adding some?
+</div>
+
+<div class="row search-area" ng-show="notes!=null&&notes.length > 1">
+    <div class="col-md-4 col-md-offset-4">
         <div class="form-group">
             <div class="input-group" ng-class="authError ? 'has-error' : ''">
                     <span class="input-group-addon">
@@ -11,7 +25,22 @@
         </div>
     </div>
 </div>
-<div ng-show="notes.length" class="row">
+<div class="row" ng-show="notes!=null">
+    <div class="col-md-4 note">
+        <form ng-submit="add(note)" class="panel panel-default">
+            <div class="panel-heading">
+                <i class="glyphicon glyphicon-plus"></i> Add a new note
+            </div>
+            <div class="panel-body note-body">
+                <div class="form-group">
+                    <textarea class="form-control" ng-model="note.text" rows="3" placeholder="Enter your new note here"></textarea>
+                </div>
+            </div>
+            <div class="panel-footer clearfix">
+                <button class="btn btn-xs btn-success pull-right">add</button>
+            </div>
+        </form>
+    </div>
     <div class="col-md-4 note" ng-repeat="note in notes | filter:noteFilter">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -32,19 +61,3 @@
     </div>
 </div>
 
-<div class="alert alert-warning" role="alert" ng-show="!notes.length">
-    <strong>Warning!</strong> No notes yet. Why not adding some?
-</div>
-<div class="row add-note">
-    <div class="col-sm-6 col-md-4">
-        <h2 class="page-header">Add a new note</h2>
-        <form ng-submit="add(note)">
-            <div class="form-group">
-                <textarea class="form-control" ng-model="note.text" rows="4" placeholder="Enter your new note here"></textarea>
-            </div>
-            <div class="form-group">
-                <button class="btn btn-primary">add</button>
-            </div>
-        </form>
-    </div>
-</div>
